syntax = "proto3";
package WorkerNode;

option go_package = "github.com/resource-aware-jds/container-lib/generated/proto";

import "google/protobuf/empty.proto";

service WorkerNodeContainerReceiver {
  rpc SubmitSuccessTask(SubmitSuccessTaskRequest) returns (google.protobuf.Empty) {}
  rpc ReportTaskFailure(ReportTaskFailureRequest) returns (google.protobuf.Empty) {}
}

message SubmitSuccessTaskRequest {
  string ID=1;
  repeated bytes Results=2;
}

message ReportTaskFailureRequest {
  string ID=1;
  string ErrorDetail=2;
}